--- a/views/login.pug
+++ b/views/login.pug
@@ -7,4 +7,4 @@ block content
             input(type="text", name="logUsername", placeholder="Usuário ou email", required)
             input(type="password", name="logPassword", placeholder="Senha", required)
             input(type="submit", value="Login")
-        a(href="/register") Criar conta
+        a(href="/register") Não tem uma conta? Inscreva-se
