--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,5 @@
+include ../mixins/mixins
+
 doctype html
 html(lang="en")
     head
@@ -26,6 +28,8 @@ html(lang="en")
                     a(href="/logout")
                         i.fa-solid.fa-sign-out-alt
                 .mainSectionContainer.col-10.col-md-8.col-lg-6 
+                    .titleContainer 
+                        h1 #{pageTitle}
                     block content 
                 div.d-none.d-md-block.col-md-2.col-lg-4 
                     span third column
@@ -34,3 +38,5 @@ html(lang="en")
         script(src='https://code.jquery.com/jquery-3.6.0.min.js', integrity='sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js', integrity='sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js', integrity='sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13', crossorigin='anonymous')
+
+        script(src="/js/common.js")
