--- a/views/register.pug
+++ b/views/register.pug
@@ -5,12 +5,12 @@ block content
         h1 Cadastro
         form#registerForm(method="post", onsubmit="event.preventDefault(); validateForm()")
             p.errorMessage #{errorMessage}
-            input(type="text", name="firstName", placeholder="Nome", value=firstName, required)
-            input(type="text", name="lastName", placeholder="Sobrenome", value=lastName, required)
-            input(type="text", name="username", placeholder="Usuário", value=username, required)
-            input(type="email", name="email", placeholder="Email", value=email, required)
-            input#password(type="password", name="password", placeholder="Senha", required)
-            input#passwordConf(type="password", name="passwordConf", placeholder="Confirme sua senha", required)
+            input(type="text", name="firstName", placeholder="Nome", value=firstName, maxlength="20",required)
+            input(type="text", name="lastName", placeholder="Sobrenome", value=lastName, maxlength="20", required)
+            input(type="text", name="username", placeholder="Usuário", value=username, maxlength="15", required)
+            input(type="email", name="email", placeholder="Email", value=email, maxlength="50", required)
+            input#password(type="password", name="password", placeholder="Senha", maxlength="20", required)
+            input#passwordConf(type="password", name="passwordConf", placeholder="Confirme sua senha", maxlength="20", required)
             input(type="submit", value="Cadastrar-se")
         a(href="/Login") Login
 
