--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,8 @@
     --buttonHover-Bg: #d4edff;
     --lightGrey: rgb(230, 236, 240);
     --spacing: 15px;
-    
+    --greyText: rgb(101,119,134);
+    --greyButtonText: rgba(0,0,0,0.34);
 }
 
 * {
@@ -17,6 +18,7 @@ a {
 
 a:hover {
     color: inherit;
+    text-decoration: none;
 }
 
 h1 {
@@ -52,6 +54,12 @@ nav a:hover {
     background-color: var(--buttonHover-Bg);
     color: var(--blue);
     border-radius: 50%;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    color: var(--greyButtonText);
 }
 
 .mainSectionContainer {
@@ -115,5 +123,64 @@ nav a:hover {
 
 #submitPostButton:disabled {
     background-color: var(--blueLight);
+}
+
+.post {
+    display: flex;
+    flex-direction: column;
+    padding: var(--spacing);
+    cursor: pointer;
+    border-bottom: 1px solid var(--lightGrey);
+    flex-shrink: 0;
+}
+
+.mainContentContainer {
+    flex: 1;
+    display: flex;
+}
+
+.postContentContainer {
+    padding-left: var(--spacing);
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.displayName {
+    font-weight: bold;
+}
+
+.username,
+.date {
+    color: var(--greyText);
+}
+
+.postFooter {
+    display: flex;
+    align-items: center;
+}
+
+.postFooter .postButtonContainer {
+    flex: 1;
+    display: flex;
+}
+
+.postFooter .postButtonContainer button {
+    padding: 2px 5px;
+}
+
+.header a:hover {
+    text-decoration: underline;
+}
+
+.header a,
+.header span {
+    padding-right: 5px;
+}
+
+.postButtonContainer button:hover {
+    background-color: #d4edff;
+    color: var(--blue);
+    border-radius: 50%;
 }
 
