--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -6,3 +6,23 @@ mixin createPostForm(userLoggedIn)
             textarea#postTextarea(placeholder="Digite aqui suas militâncias...")
             .buttonsContainer
                 button#submitPostButton(disabled="") Post 
+
+mixin createReplyModal(userLoggedIn)
+    #replyModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='replyModalLabel', aria-hidden='true')
+        .modal-dialog(role='document')
+            .modal-content
+                .modal-header
+                    h5#replyModalLabel.modal-title Responder
+                    button#xCloseReplyModal.close(type='button', data-dismiss='modal', aria-label='Close')
+                        span(aria-hidden='true') &times;
+                .modal-body
+                    #originalPostContainer
+                    .postFormContainer 
+                        .userImageContainer
+                            img(src=userLoggedIn.profilePic, alt="User's profile picture")
+                        .textareaContainer 
+                            textarea#replyTextarea(placeholder="Digite aqui sua resposta...")
+                .modal-footer
+                    button#closeReplyModal.btn.btn-secondary(type='button', data-dismiss='modal') Cancelar
+                    button#submitReplyButton.btn.btn-primary(type='button', disabled="") Responder
+
