--- a/views/login.pug
+++ b/views/login.pug
@@ -7,11 +7,8 @@ block content
 
             p.errorMessage #{errorMessage}
 
-            //- input(type="text", name="logUsername", placeholder="Usuário ou email", value=logUsername, required)
-            //- input(type="password", name="logPassword", placeholder="Senha", required)
-
-            input(type="text", name="logUsername", placeholder="Usuário ou email", value="Luiggi", required)
-            input(type="password", name="logPassword", placeholder="Senha", value="123456", required)
+            input(type="text", name="logUsername", placeholder="Usuário ou email", value=logUsername, required)
+            input(type="password", name="logPassword", placeholder="Senha", required)
 
             input(type="submit", value="Login")
         a(href="/register") Não tem uma conta? Inscreva-se
