--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -5,7 +5,7 @@ mixin createPostForm(userLoggedIn)
         .textareaContainer 
             textarea#postTextarea(placeholder="Digite aqui suas militâncias...")
             .buttonsContainer
-                button#submitPostButton(disabled="") Post 
+                button#submitPostButton(disabled="") Postar 
 
 mixin createReplyModal(userLoggedIn)
     #replyModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='replyModalLabel', aria-hidden='true')
