--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -18,7 +18,7 @@ html(lang="en")
             .row 
                 nav.col-2  
                     a.blue()
-                        i.fa-solid.fa-atom
+                        small Luitter
                     a(href="/")
                         i.fa-solid.fa-house
                     a(href="/search")
@@ -35,7 +35,7 @@ html(lang="en")
                     .titleContainer 
                         h1 #{pageTitle}
                     block content 
-                div.d-none.d-md-block.col-md-2.col-lg-4 
+                div.d-none.d-md-block.col-md-2.col-lg-2 
                     
         
         script(src='https://kit.fontawesome.com/676b4913e5.js' crossorigin='anonymous')
