--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,7 +57,7 @@ nav a.blue {
     color: var(--blue);
 }
 
-nav a:hover {
+nav a:not(.blue):hover {
     background-color: var(--buttonHover-Bg);
     color: var(--blue);
     border-radius: 50%;
@@ -174,6 +174,10 @@ button span {
 .post:hover {
     border-bottom: 3px solid rgb(230, 236, 240);
     background-color: var(--hoverDarkBackground);
+}
+
+.postBody > span {
+    word-break: break-word;
 }
 
 .mainContentContainer {
