--- a/views/login.pug
+++ b/views/login.pug
@@ -4,11 +4,13 @@ block content
     .loginContainer 
         h1 Login
         form(method="post") 
-
             p.errorMessage #{errorMessage}
-
-            input(type="text", name="logUsername", placeholder="Usuário ou email", value=logUsername, required)
-            input(type="password", name="logPassword", placeholder="Senha", required)
+            .input-field
+                i.fas.fa-user
+                input.login(type="text", name="logUsername", placeholder="Usuário ou email", value=logUsername, required)
+            .input-field
+                i.fas.fa-lock
+                input.login(type="password", name="logPassword", placeholder="Senha", required)
 
             input(type="submit", value="Login")
         a(href="/register") Não tem uma conta? Inscreva-se
